[project]
name = "streaming-deep-rl"
version = "0.1.19"
description = "Streaming Deep Reinforcement Learning"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.9"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'reinforcement learning',
    'streaming'
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
]

dependencies = [
    "discrete-continuous-embed-readout>=0.2.0",
    "einops>=0.8.1",
    "ema-pytorch",
    "hl-gauss-pytorch",
    "torch>=2.4",
    "torch-einops-utils",
    "x-mlps-pytorch>=0.2.8",
]

[project.urls]
Homepage = "https://pypi.org/project/streaming-deep-rl/"
Repository = "https://codeberg.org/lucidrains/streaming-deep-rl"

[project.optional-dependencies]

examples = []
test = [
    "gymnasium[box2d]>=1.0",
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[build-system]
requires = ["hatchling", "swig"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["streaming_deep_rl"]

[tool.hatch.build.targets.sdist]
include = [
    "streaming_deep_rl",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
